welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:7: error: Unmatched closing brace '}' ignored here
	}
        ^Balin:8: error: eof expected but '}' found.
}
^